# jp

./: .env.translator.sample  .gitignore  .secrets.translator.sample  .textlintrc.json  CLAUDE.md  DEPLOYMENT_GUIDE.md  README.md  _config.yml  docusaurus.config.ts  index.html  package-lock.json  package.json  redirects.config.ts  sidebars.ts
.github/auto-translation/: .env.sample  .gitignore  Makefile  README.md  classification.json  pyproject.toml  requirements.txt  spec.md  tasks.md
.github/auto-translation/docs/: style-guide-release.md  style-guide.md
.github/auto-translation/scripts/: classify_changes.py  commit_and_pr.py  fetch_upstream.py  postprocess.py  run_translation_pipeline.py  translate_chunk.py
.github/auto-translation/tests/: test_classify_changes.py  test_fetch_upstream.py  test_postprocess.py  test_translate_chunk.py
.migration/: REQUIREMENTS.md  SPEC.md  TASKS.md
_layouts/: default.html
_posts/: 2021-03-21-jhipster-release-7.0.0.md  2021-04-02-jhipster-release-7.0.1.md  2021-06-18-jhipster-release-7.1.0.md  2021-09-14-jhipster-release-7.2.0.md  2021-10-08-jhipster-release-7.3.0.md  2021-10-19-jhipster-release-7.3.1.md  2021-11-19-jhipster-release-7.4.0.md  2021-12-03-jhipster-release-7.4.1.md  2022-01-02-jhipster-release-7.5.0.md  2022-01-23-jhipster-release-7.6.0.md  2022-02-27-jhipster-release-7.7.0.md  2022-04-01-jhipster-release-7.8.0.md  2022-04-07-jhipster-release-7.8.1.md  2022-07-31-jhipster-release-7.9.0.md  2022-07-31-jhipster-release-7.9.2.md  2022-09-02-jhipster-release-7.9.3.md  2023-06-11-jhipster-release-8.0.0-beta.1.md  (+12 more)
(+361 files in other folders)
